[package]
name = "cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore CLI: composition root + verb dispatch + two-prompt UX (ADR-003)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "openlore"
path = "src/main.rs"

[features]
# D-D20 / WD-21: build-time test escape hatch for the `peer remove --purge`
# interactive confirmation. When enabled (CI acceptance builds), the
# `OPENLORE_TEST_AUTOCONFIRM=1` env var bypasses the prompt. MUST NOT be
# enabled in release builds — `verbs::peer_remove::autoconfirm_purge` then
# compiles to a `const false` with no env-var read, so a shipped binary has
# provably no auto-confirm path. `cargo xtask` (step 01-06) verifies this.
test-autoconfirm = []
# Slice-03 peer-storage probe gate. OFF at this bootstrap step because the
# `DuckDbPeerStorageAdapter::probe()` body is still a RED `todo!()` scaffold
# (01-02); enabling the gauntlet entry would panic the binary. Flipped on
# once the real probe lands with the PS-* scenarios (I-FED-3 enforces a
# non-stub body via xtask check-probes at that point).
peer-storage-probe-live = []

# DRIVER / composition root. Only crate allowed to depend on adapter-*.
[dependencies]
ports = { path = "../ports" }
claim-domain = { path = "../claim-domain" }
lexicon = { path = "../lexicon" }
adapter-duckdb = { path = "../adapter-duckdb" }
adapter-atproto-did = { path = "../adapter-atproto-did" }
adapter-atproto-pds = { path = "../adapter-atproto-pds" }
adapter-system-clock = { path = "../adapter-system-clock" }
# Slice-02 (github scraper; ADR-019). The composition root is the only crate
# allowed to depend on `adapter-*`. `scraper-domain` is the PURE candidate
# derivation crate the `scrape github` verb calls (the live derive lands in
# Phase 03/05; the dep is wired now so the verb module can name it).
adapter-github = { path = "../adapter-github" }
scraper-domain = { path = "../scraper-domain" }
# Slice-04 (scoring + graph; ADR-022). The composition root is the only crate
# allowed to depend on `adapter-*` + the pure cores. `scoring` is the PURE
# adherence-weight core the `graph query --weighted`/`--explain` explorer path
# feeds attributed claims into (the live `scoring::score` call lands per
# acceptance scenario in Phase 02/05; the dep is wired now so the explorer
# handler module can name it and the wiring can construct the scoring config).
scoring = { path = "../scoring" }
# Slice-05 (appview search; ADR-027). The composition root wires the index-query
# CLIENT (`adapter-index-query`) for the `openlore search` verb's transport to
# the self-hosted indexer; `appview-domain` is the PURE core the verb re-composes
# the per-author network result through. The CLI links the CLIENT ONLY — NEVER
# the indexer's server (`adapter-xrpc-query-server`) / store (`adapter-index-store`)
# / ingest (`adapter-atproto-ingest`) crates (I-AV-3, enforced by xtask check-arch).
adapter-index-query = { path = "../adapter-index-query" }
appview-domain = { path = "../appview-domain" }
# Slice-06 (htmx viewer; ADR-028/030). The composition root is the ONLY crate
# allowed to link `adapter-http-viewer` — the `openlore ui` viewer's hyper HTTP
# shell over a READ-ONLY `StoreReadPort` (I-VIEW-1). The capability invariant (cli
# is the sole linker; the adapter holds no signing/identity/pds surface) is
# enforced by `xtask check-arch`'s viewer capability rule.
adapter-http-viewer = { path = "../adapter-http-viewer" }
clap = { version = "4", features = ["derive"] }
# Slice-06: the `openlore ui` serve loop binds a hyper listener; the accept loop
# needs the `net` feature in addition to the existing macros/rt (the viewer reuses
# `claim_publish::build_tokio_runtime`, a current-thread runtime).
tokio = { workspace = true, features = ["macros", "rt", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Acceptance tests live at the workspace root (`tests/acceptance/*.rs`)
# per DISTILL's authored scaffolds, but the openlore binary they drive
# is THIS crate's [[bin]] — so the cli package owns the test targets
# and assert_cmd::Command::cargo_bin("openlore") resolves correctly.
[dev-dependencies]
openlore-test-support = { path = "../test-support" }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
# Step 05-08: acceptance tests for WS-8+ query DuckDB publication
# metadata directly (no StoragePort surface for it yet — that lands
# with graph-query later in phase 05). Dev-only — production cli code
# goes through StoragePort.
duckdb = { version = "1.3", features = ["bundled", "chrono"] }
chrono = { workspace = true }
# Step 04-01: the peer_pull acceptance helper `build_verifiable_peer_records`
# materializes REAL Ed25519 signatures (the slice-03 peer fixtures ship
# placeholder sigs per `fixtures_peer.rs`). Deterministic seeded keypair;
# `default-features = false` keeps OS randomness off the test compile path.
ed25519-dalek = { version = "2", default-features = false }
# Step 01-05 (slice-05; DD-AV-13/DD-AV-14): the indexer_ingest + appview_search
# acceptance harness spawns the REAL `openlore-indexer` binary via
# `assert_cmd::cargo_bin("openlore-indexer")` (the SECOND composition root) over
# an ephemeral localhost serve port (DEVOPS open-q 8 parallel-safety). Adding it
# as a dev-dependency makes cargo build the binary for these test targets so
# `cargo_bin` resolves it. The CLI's PRODUCTION dep graph still links ONLY the
# index-query CLIENT (above) — never the indexer's server/store/ingest crates
# (I-AV-3); this is a TEST-ONLY dependency on the sibling binary crate.
openlore-indexer = { path = "../openlore-indexer" }
# Slice-06 (htmx-scraper-viewer; DISTILL): the viewer acceptance harness
# (`ViewerServer` in tests/acceptance/support) issues in-test HTTP GET/POST
# against the long-running `openlore ui` process and asserts on the returned
# HTML. Unlike the slice-05 indexer ATs (which query through the `search`
# subprocess), the viewer ATs need an in-test HTTP client, so add `reqwest`'s
# BLOCKING client (rustls; same version/TLS the workspace already uses in
# `adapter-index-query`). Dev-only — production viewer code serves via hyper.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }

[[test]]
name = "walking_skeleton"
path = "../../tests/acceptance/walking_skeleton.rs"
harness = true

[[test]]
name = "lexicon_conformance"
path = "../../tests/acceptance/lexicon_conformance.rs"
harness = true

[[test]]
name = "federation_roundtrip"
path = "../../tests/acceptance/federation_roundtrip.rs"
harness = true

# Slice-03 layer-2 lexicon-conformance acceptance (counter-claim). Like
# `lexicon_conformance` above it exercises the pure core (`lexicon` +
# `claim_domain`) DIRECTLY — no CLI subprocess — so it lives under the
# cli package's test targets purely for workspace co-location. Step 02-01
# activates the LCC-1 scenario; sibling scenarios stay RED (`todo!()`).
[[test]]
name = "lexicon_counter_claim"
path = "../../tests/acceptance/lexicon_counter_claim.rs"
harness = true

# Slice-03 subprocess acceptance (peer subscribe — US-FED-001 + US-FED-005).
# Drives the real `openlore` binary via `assert_cmd` + `FakePeerPds`. Step
# 03-01 activates the PS-1 scenario; PS-2..PS-8 stay RED (`todo!()`).
[[test]]
name = "peer_subscribe"
path = "../../tests/acceptance/peer_subscribe.rs"
harness = true

# Slice-03 subprocess acceptance (peer pull — US-FED-002). Drives the real
# `openlore` binary via `assert_cmd` + `FakePeerPds`. Step 04-01 activates
# the PP-1 scenario (LOAD-BEARING J-003 walking-skeleton beat); PP-2..PP-8
# stay RED (`todo!()`).
[[test]]
name = "peer_pull"
path = "../../tests/acceptance/peer_pull.rs"
harness = true

# Slice-03 subprocess acceptance (counter-claim authoring — US-FED-004).
# Drives the real `openlore` binary via `assert_cmd` + `FakePeerPds` +
# `FakePds`. Step 05-01 activates the CC-1 scenario (LOAD-BEARING J-003b
# authoring beat; KPI-FED-3 north star); CC-2..CC-6 stay RED (`todo!()`).
[[test]]
name = "counter_claim"
path = "../../tests/acceptance/counter_claim.rs"
harness = true

# Slice-03 subprocess acceptance (federated read — US-FED-003). Drives the
# real `openlore` binary via `assert_cmd` + `FakePeerPds`. Step 05-06
# activates the FQ-1 scenario (LOAD-BEARING J-003a anti-merging reader beat;
# integration gate 1 `federation_attribution_preserved` + KPI-FED-1/2
# release-blocking); FQ-2..8 stay RED (`todo!()`).
[[test]]
name = "federated_query"
path = "../../tests/acceptance/federated_query.rs"
harness = true

# Slice-02 subprocess acceptance (scrape github harvest + walking skeleton —
# US-SCR-001/002). Drives the real `openlore` binary via `assert_cmd` +
# `FakeGithub` (the public-GitHub double) + the slice-01 `FakePds`/`FakeIdentity`.
# Step 01-05 registers the target + materializes FakeGithub/fixtures so the
# 34 slice-02 scenarios classify RED (panic at `todo!()`); SG-1..SG-* stay
# RED until DELIVER's per-scenario phases 02-05.
[[test]]
name = "scrape_github"
path = "../../tests/acceptance/scrape_github.rs"
harness = true

# Slice-02 subprocess acceptance (candidate derivation render — US-SCR-002).
# Same FakeGithub-driven shape as `scrape_github`. Step 01-05 registers +
# RED gate; SC-* scenarios stay RED (`todo!()`).
[[test]]
name = "scrape_candidates"
path = "../../tests/acceptance/scrape_candidates.rs"
harness = true

# Slice-02 subprocess acceptance (scrape -> propose -> sign — US-SCR-003).
# Drives the real binary via `assert_cmd` + `FakeGithub` + the slice-01
# `FakePds`/`FakeIdentity` sign/publish path. Step 01-05 registers + RED
# gate; SS-* scenarios stay RED (`todo!()`).
[[test]]
name = "scrape_sign"
path = "../../tests/acceptance/scrape_sign.rs"
harness = true

# Slice-02 subprocess acceptance (optional PAT for higher rate limits —
# US-SCR-004). FakeGithub authenticated/rate-limited/token-rejected postures
# + the no-token-leak gate. Step 01-05 registers + RED gate; SA-* scenarios
# stay RED (`todo!()`).
[[test]]
name = "scrape_auth"
path = "../../tests/acceptance/scrape_auth.rs"
harness = true

# Slice-02 layer-2 acceptance (pure `scraper-domain` derivation properties +
# mapping-SSOT conformance — US-SCR-002/006). Exercises the PURE core
# DIRECTLY (no CLI subprocess), so it lives under the cli package's test
# targets purely for workspace co-location (symmetric with
# `lexicon_counter_claim`). `@property` proptest scenarios (SD-1..SD-3) plus
# example-pinned (SD-4..SD-6). Step 01-05 registers + RED gate; SD-* stay RED.
[[test]]
name = "scraper_domain"
path = "../../tests/acceptance/scraper_domain.rs"
harness = true

# Slice-04 subprocess acceptance (graph query explorer flags — US-GRAPH-001..006;
# ADR-020). Drives the real `openlore` binary via `assert_cmd` over a REAL
# DuckDB seeded with own + peer claims (slice-03 `claim add` / `peer add` /
# `peer pull` seam — no new external fake). Step 01-04 registers the target +
# lands the 6 explorer flags (todo!() handler bodies) so the 27 GQE scenarios
# classify RED (panic at `todo!()`); GQE-1..27 stay RED until DELIVER's
# per-scenario phases.
[[test]]
name = "graph_query_explore"
path = "../../tests/acceptance/graph_query_explore.rs"
harness = true

# Slice-04 layer-2 acceptance (pure `scoring` core transparency + anti-merging
# properties — US-GRAPH-003/005/006). Exercises the PURE core DIRECTLY (no CLI
# subprocess), so it lives under the cli package's test targets purely for
# workspace co-location (symmetric with `scraper_domain` / `lexicon_counter_claim`).
# `@property` proptest scenarios (SC-1..SC-4) plus example-pinned (SC-5..SC-6).
# Step 01-04 registers + RED gate; the 6 SC scenarios stay RED (`todo!()`).
[[test]]
name = "scoring_core"
path = "../../tests/acceptance/scoring_core.rs"
harness = true

# Slice-05 subprocess acceptance (the `openlore-indexer` verified attributed
# ingest pipeline — US-AV-001). Drives the REAL `openlore-indexer` binary via
# `assert_cmd::cargo_bin` against a `FakeIngestSource` (the adversarial + valid
# record source) + a real-`z6Mk` PLC DID-doc resolver, over a REAL separate
# `index.duckdb`. Step 01-05 registers the target + materializes the harness +
# fixtures so the 7 AV-1..AV-7 scenarios classify RED (panic at `todo!()`);
# they stay RED until DELIVER's per-scenario Phase 02+ steps.
[[test]]
name = "indexer_ingest"
path = "../../tests/acceptance/indexer_ingest.rs"
harness = true

# Slice-05 subprocess acceptance (the `openlore search` network-discovery verb —
# US-AV-002..006; ADR-027). Drives the REAL `openlore` binary via `assert_cmd`
# against a REAL `openlore-indexer serve` over an ephemeral localhost port (B1
# transport; DEVOPS open-q 8 parallel-safe) over a seeded `index.duckdb`. Step
# 01-05 registers + RED gate; the 22 AV-8..AV-29 scenarios stay RED (`todo!()`).
[[test]]
name = "appview_search"
path = "../../tests/acceptance/appview_search.rs"
harness = true

# Slice-05 layer-2 acceptance (pure `appview-domain` core — the verify-before-
# index gate + anti-merging search composition; US-AV-001/002/004). Exercises the
# PURE core DIRECTLY (no indexer subprocess), so it lives under the cli package's
# test targets purely for workspace co-location (symmetric with `scoring_core` /
# `scraper_domain` / `lexicon_counter_claim`). `@property` proptest scenarios
# (AVC-1/2/3a/3b/4) plus example-pinned (AVC-5/6/7/8). Step 01-05 registers +
# RED gate; the AVC scenarios stay RED (`todo!()`).
[[test]]
name = "appview_core"
path = "../../tests/acceptance/appview_core.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` read-only htmx
# viewer — store views US-VIEW-001/002/003/004; ADR-028/029/030). Drives the REAL
# `openlore ui` verb via the `ViewerServer` spawn helper (long-running localhost
# `:0` server, read back) + in-test HTTP over a REAL DuckDB seeded through the
# production `claim add` / `peer pull` write paths (BR-VIEW-4 — same store). No new
# external fake (GitHub is only on `/scrape`). DISTILL registers the target +
# materializes the harness so the V-* scenarios classify RED (panic at `todo!()`);
# V-1..V-* stay RED until DELIVER's per-scenario phases.
[[test]]
name = "viewer_store"
path = "../../tests/acceptance/viewer_store.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` live-scrape view —
# US-VIEW-005; ADR-028). Drives the REAL `openlore ui` verb via `ViewerServer` +
# in-test HTTP POST /scrape, REUSING the slice-02 `FakeGithub` double (the ONLY
# mocked boundary) for the live ephemeral harvest; persists NOTHING (BR-VIEW-2),
# renders NO sign control (BR-VIEW-1 / I-SCR-1), and surfaces derived-from ONLY
# here (I-VIEW-5 / WD-62). DISTILL registers + RED gate; V-S* stay RED (`todo!()`).
[[test]]
name = "viewer_scrape"
path = "../../tests/acceptance/viewer_scrape.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` viewer GOLD /
# guardrail invariants — I-VIEW-1/2/4/5/6). The `@property` guardrail gold tests
# from DESIGN §7 / ADR-030 §Earned-Trust: viewer_is_read_only (store row counts
# UNCHANGED after EVERY route incl. POST /scrape), derived_from_only_on_candidates,
# store_views_work_offline, web_process_holds_no_signing_key. Drives the REAL
# `openlore ui` verb via `ViewerServer` over a REAL store. Per Mandate 11 the sad
# paths are example-based, never PBT-generated at this layer. DISTILL registers +
# RED gate; V-INV* stay RED (`todo!()`).
[[test]]
name = "viewer_invariants"
path = "../../tests/acceptance/viewer_invariants.rs"
harness = true

# Slice-07 (viewer-htmx-swaps; DISTILL) subprocess + real-I/O acceptance: htmx
# partial-swaps as a PROGRESSIVE ENHANCEMENT over the slice-06 read-only viewer
# (US-HX-001..004 + US-HX-006; ADR-031/032/033/034/035). Drives the REAL `openlore
# ui` verb via `ViewerServer` + in-test HTTP, sending/withholding the `HX-Request`
# header (the ADR-035 `get`/`get_htmx` + `post_form`/`post_form_htmx` pair) to drive
# both shapes against the same running viewer. EVERY interaction story carries htmx
# fragment + no-JS full page + parity. GitHub (only on POST /scrape) is the REUSED
# slice-02 `FakeGithub`; DuckDB is REAL (BR-VIEW-4). DISTILL registers + materializes
# the harness so the H-* scenarios classify RED (panic at `todo!()`); H-* stay RED
# until DELIVER's per-scenario phases.
[[test]]
name = "viewer_htmx"
path = "../../tests/acceptance/viewer_htmx.rs"
harness = true

# Slice-07 (viewer-htmx-swaps; DISTILL) GOLD / guardrail invariants: the htmx asset
# served locally (US-HX-005 — `GET /static/htmx.min.js` 200 + no-CDN offline
# guarantee, I-HX-2/FR-HX-6/BR-HX-6), the no-regression byte-equivalence of non-htmx
# responses (I-HX-4 — the slice-06 26-scenario suite is the companion release gate),
# and the read-only/no-new-write-surface guardrails over the htmx fragment routes
# (I-HX-3 — `assert_store_read_only` universe-bound state-delta, Mandate 8; no sign
# control on any fragment). Drives the REAL `openlore ui` via `ViewerServer`. Per
# Mandate 11 the sad/property paths are example-based, never PBT-generated at this
# layer. DISTILL registers + RED gate; H-5*/H-INV-* stay RED (`todo!()`).
[[test]]
name = "viewer_htmx_invariants"
path = "../../tests/acceptance/viewer_htmx_invariants.rs"
harness = true

# Slice-08 (viewer-network-search; DISTILL) subprocess + real-I/O acceptance: the
# `openlore ui` NETWORK-SEARCH view (US-NS-001..004; ADR-036/037/038). A new
# `GET /search` route forks by `Shape` (slice-07 HX-Request fork) and queries the
# slice-05 network index over HTTP through the REUSED `IndexQueryPort` +
# `HttpIndexQueryAdapter`, rendering verified + attributed `NetworkSearchResult`s as
# HTML (object/contributor/subject dimensions; per-author, anti-merge, counter
# shown-not-applied; SearchState Form|Results|NoResults|Unavailable). Drives the
# REAL `openlore ui` verb via `ViewerServer` + in-test HTTP (get/get_htmx). The
# network index is the ONLY mocked boundary — a REAL slice-05 `openlore-indexer
# serve` over a seeded corpus, wired via the NEW `ViewerServer::start_with_indexer`
# (the slice-05 `OPENLORE_INDEXER_URL` seam; OD-NS-6), with reachable / unreachable
# (ClosedIndexerPort) / unconfigured postures. DuckDB store is REAL + UNTOUCHED
# (read-only; WD-NS-7). Per Mandate 9/11 the sad paths (no results, unreachable,
# unconfigured) are example-based, never PBT-generated at this layer.
# Build-before-run: `cargo build` BOTH the `openlore` and `openlore-indexer` bins.
# DISTILL registers + materializes the harness so the N-* scenarios classify RED
# (panic at `todo!()`); N-* stay RED until DELIVER's per-scenario phases.
[[test]]
name = "viewer_network_search"
path = "../../tests/acceptance/viewer_network_search.rs"
harness = true

# Slice-08 (viewer-network-search; DISTILL) GOLD / guardrail invariants over the
# whole `/search` surface (cross-cutting I-NS-1/4/7/8): every_search_route_leaves_
# the_store_read_only (read-only state-delta, Mandate 8 — results computed per
# query, nothing persisted), no_search_response_adds_a_write_or_sign_control (no
# sign/publish/subscribe/executable-follow control on any shape — follow is render-
# only TEXT), the_search_page_chrome_stays_offline_no_cdn (local /static/htmx.min.js,
# no CDN — the chrome stays offline even though the search needs the network), and
# every_rendered_search_row_is_verified_by_construction ([verified] + attributed
# across object/contributor/subject). Drives the REAL `openlore ui` via
# `ViewerServer` over a REAL store with the REUSED slice-05 indexer serve as the only
# mocked boundary. Per Mandate 9/11 example-based, never PBT-generated at this layer.
# DISTILL registers + RED gate; N-INV-* stay RED (`todo!()`).
[[test]]
name = "viewer_network_search_invariants"
path = "../../tests/acceptance/viewer_network_search_invariants.rs"
harness = true

# Slice-09 (viewer-contributor-scoring; DISTILL): the `openlore ui` CONTRIBUTOR-SCORE
# view (US-CS-001..003; ADR-039/040/041). The NEW `GET /score?contributor=<did>` route
# reads the contributor's LOCAL attributed feed over the read-only DuckDB store
# (`StoreReadPort::query_contributor_scoring_feed` — claims ∪ local peer_claims, NO
# network), runs the REUSED slice-04 PURE `scoring::score`, and renders the ranked
# `WeightedView` as HTML: per pairing the verbatim weight + `WeightBucket` label + a
# per-claim breakdown TABLE (author DID + cid + verbatim confidence + bonuses +
# subtotal) whose running sum EQUALS the displayed weight (reproduce-by-hand;
# KPI-GRAPH-3). `[SPARSE]` + the honesty line are PROJECTED from `WeightBucket::Sparse`
# (never recomputed); an empty feed → the guided `NoClaims` state. Forks by `Shape`
# (slice-07 HX-Request): full page WITHOUT `HX-Request`, the `#score-results` fragment
# WITH it. Drives the REAL `openlore ui` verb via `ViewerServer` + in-test HTTP
# (get/get_htmx) over a REAL seeded local store — `/score` is LOCAL + OFFLINE (no
# indexer, no network; distinct from /scrape + /search). Seeding postures (production
# write paths): RICH trail (a contributor across distinct subjects → a real weight +
# multi-row breakdown), SPARSE (single claim/author/subject → `[SPARSE]` at any
# confidence), EMPTY (no local claims → `NoClaims`). Per Mandate 9/11 the sad paths
# (sparse/empty) are example-based, never PBT-generated at this layer. Build-before-run:
# `cargo build` the `openlore` bin (the viewer) before running. DISTILL registers +
# materializes the harness so the C-* scenarios classify RED (panic at `todo!()`); C-*
# stay RED until DELIVER's per-scenario RED→GREEN→COMMIT phases.
[[test]]
name = "viewer_contributor_scoring"
path = "../../tests/acceptance/viewer_contributor_scoring.rs"
harness = true

# Slice-09 (viewer-contributor-scoring; DISTILL) GOLD / guardrail invariants over the
# whole `/score` surface (cross-cutting I-CS-1/2/4/5/8): every_score_route_leaves_the_
# store_read_only (read-only state-delta, Mandate 8 — score computed per query, nothing
# persisted), no_score_response_adds_a_write_or_sign_control (no sign/publish/follow
# control on any shape), the_score_page_chrome_stays_offline_no_cdn (local
# /static/htmx.min.js, no CDN), the_score_surface_works_fully_offline (LOCAL read — no
# network even for the DATA, distinct from /search), and the cardinal
# transparency-by-construction gold a_rendered_score_is_never_shown_without_its_
# breakdown_summing_to_the_weight (the J-002c reproduce-by-hand release gate). Drives
# the REAL `openlore ui` via `ViewerServer` over a REAL seeded local store; NO mocked
# boundary (the score is a LOCAL read + PURE compute). Per Mandate 9/11 example-based,
# never PBT-generated at this layer. DISTILL registers + RED gate; C-INV-* stay RED
# (`todo!()`).
[[test]]
name = "viewer_contributor_scoring_invariants"
path = "../../tests/acceptance/viewer_contributor_scoring_invariants.rs"
harness = true

# Slice-10 (viewer-graph-traversal; DISTILL): the `openlore ui` GRAPH-TRAVERSAL views
# (US-GT-002/003/004; ADR-042/043/044/045). Two NEW LOCAL read-only routes —
# `GET /project?subject=<uri>` (project survey) and `GET /philosophy?object=<uri>`
# (philosophy survey) — read the entity's LOCAL attributed survey over the read-only
# DuckDB store (`StoreReadPort::query_project_survey` / `query_philosophy_survey` —
# claims ∪ local peer_claims, UNION ALL, NO merge, NO network), group the attributed
# claims in the PURE `viewer-domain` core into a `TraversalView` ADT (grouping in
# Rust, never SQL — anti-merging, I-GT-3), and render: per group a traversal `<a href>`
# to the OTHER dimension, per edge the attributed author_did + verbatim confidence +
# the REUSED claim-domain display-only bucket + cid (every edge = one signed claim,
# I-GT-4). Distinct contributors link to `/score?contributor=<bare-did>` (slice-09
# terminus REUSED; ADR-044 Q1). Empty/unknown entity → guided `NoClaims` (200, no
# fabricated edge). Forks by `Shape` (slice-07 HX-Request): full page WITHOUT
# `HX-Request`, the `#traversal-results` fragment WITH it (parity by construction,
# I-GT-6). US-GT-004 wires every survey cell as an `<a href>` traversal edge; claim-
# controlled subject/object URIs are PERCENT-ENCODED into the href (the ADR-044
# §security injection boundary — a hostile peer URI cannot break out of the attribute).
# Drives the REAL `openlore ui` verb via `ViewerServer` + in-test HTTP (get/get_htmx)
# over a REAL seeded local store — traversal is LOCAL + OFFLINE (no indexer, no GitHub;
# offline-STRONGER than /search). Seeding postures (production peer path): PROJECT
# trail, PHILOSOPHY trail (spanning contributor), TWO-AUTHORS-one-edge (anti-merging),
# EMPTY (NoClaims), INJECTION-URI (the §security fixture). Per Mandate 9/11 the sad
# paths (no-claims, injection URI) are example-based, never PBT-generated at this
# layer. Build-before-run: `cargo build` the `openlore` bin (the viewer) before
# running. DISTILL registers + materializes the harness so the GT-* scenarios classify
# RED (panic at `todo!()`); GT-* stay RED until DELIVER's per-scenario phases.
[[test]]
name = "viewer_graph_traversal"
path = "../../tests/acceptance/viewer_graph_traversal.rs"
harness = true

# Slice-10 (viewer-graph-traversal; DISTILL) GOLD / guardrail invariants over the
# whole `/project` + `/philosophy` surface (cross-cutting I-GT-1/2/3/4/7):
# every_traversal_route_leaves_the_store_read_only (read-only state-delta, Mandate 8 —
# surveys computed per query, nothing persisted), no_traversal_response_adds_a_write_
# or_sign_control (no sign/publish/follow control on any shape — cross-links are
# render-only `<a href>` TEXT), the_traversal_page_chrome_stays_offline_no_cdn (local
# /static/htmx.min.js, no CDN), the_traversal_surface_works_fully_offline (LOCAL read,
# no outbound edge — offline-STRONGER than /search), and the SECURITY gold
# no_traversal_href_lets_a_claim_controlled_uri_inject (ADR-044 §security — a hostile
# claim-controlled URI is percent-encoded into the href and can never inject/break).
# Drives the REAL `openlore ui` via `ViewerServer` over a REAL seeded local store; NO
# mocked boundary (both routes are a LOCAL read + PURE group/render). Per Mandate 9/11
# example-based, never PBT-generated at this layer. DISTILL registers + RED gate;
# GT-INV-* stay RED (`todo!()`).
[[test]]
name = "viewer_graph_traversal_invariants"
path = "../../tests/acceptance/viewer_graph_traversal_invariants.rs"
harness = true

# Slice-11 (viewer-counter-claim-threads; DISTILL) — the counter-claim THREAD on the
# EXISTING read-only `GET /claims/{cid}` detail route (US-CT-002/003; ADR-046/047).
# BENEATH the claim + evidence, ALL counters targeting that CID render as a thread —
# each with its OWN author DID, its OWN CID (an `<a href>` drill-link to
# /claims/{counter_cid}), and its verbatim free-text `--reason`. The original claim is
# rendered VERBATIM with its ORIGINAL confidence (shown-never-applied, I-CT-2); counters
# are SHOWN, never applied. The read is the 2-step ADR-046 decode-and-filter: the INDEXED
# `claim_references`/`peer_claim_references` lookup by referenced_cid (UNION ALL,
# attributed, no-merge) + a per-row `read_artifact_at` for each counter's reason (the
# reason is NOT a DB column — it lives in the on-disk SignedClaim artifact, ADR-015). The
# thread is DEPTH-1 (ADR-047 — no nested/recursive counter render). An un-countered claim
# renders exactly as slice-06 (no empty-thread noise). Drives the REAL `openlore ui` verb
# via `ViewerServer` + in-test HTTP (get/get_htmx) over a REAL seeded local store —
# seeded through the PRODUCTION CLI counter path (own counter via `claim counter`; peer
# counter via `peer add`+`peer pull`). The 2-step read is LOCAL (DB index + local artifact
# fs read), no network on this route. Per Mandate 9/11 the sad paths (empty-reason
# counter, unknown CID) are example-based, never PBT-generated at this layer. Build-before-
# run: `cargo build` the `openlore` bin (the viewer) before running. DISTILL registers +
# materializes the harness so the CT-* scenarios classify RED (panic at `todo!()`); CT-*
# stay RED until DELIVER's per-scenario phases.
[[test]]
name = "viewer_counter_claim_threads"
path = "../../tests/acceptance/viewer_counter_claim_threads.rs"
harness = true

# Slice-11 (viewer-counter-claim-threads; DISTILL) GOLD / guardrail invariants over the
# whole countered-detail surface (cross-cutting I-CT-1/2/3/5/6):
# every_detail_route_with_counters_leaves_the_store_read_only (read-only state-delta,
# Mandate 8 — the thread is computed per query, nothing persisted),
# no_detail_response_with_counters_adds_a_write_or_sign_control (no sign/publish/counter
# control on any shape — counter CID drill-links are render-only `<a href>` TEXT;
# authoring stays the slice-03 CLI), the_counter_thread_page_chrome_stays_offline_no_cdn
# (local /static/htmx.min.js, no CDN), the_counter_thread_renders_fully_offline (the
# 2-step read is LOCAL — DB + local artifact fs read; renders network-down; the viewer
# re-verifies nothing), and the SHOWN-NEVER-APPLIED gold
# the_countered_claim_confidence_is_byte_identical_with_and_without_counters (I-CT-2 /
# OD-AV-7 / ADR-015 — the counter never filters/merges/re-weights/re-ranks the claim).
# Drives the REAL `openlore ui` via `ViewerServer` over a REAL seeded local store; NO
# mocked boundary (the route is a LOCAL 2-step read + PURE projection/render). Per Mandate
# 9/11 example-based, never PBT-generated at this layer. DISTILL registers + RED gate;
# CT-INV-* stay RED (`todo!()`).
[[test]]
name = "viewer_counter_claim_threads_invariants"
path = "../../tests/acceptance/viewer_counter_claim_threads_invariants.rs"
harness = true

# Slice-12 (viewer-counter-claim-list-flags; DISTILL) — the at-a-glance "Countered"
# PRESENCE FLAG on the `GET /claims` LIST rows (US-LF-001/002/003; ADR-048). Extends the
# slice-06 own-claims list so each row whose claim has ≥1 counter carries the neutral
# slice-11 `COUNTERED_PRESENCE_FLAG` ("Countered") rendered as a render-only
# `<a href="/claims/{cid}">Countered</a>` one-hop link to that claim's slice-11 thread;
# un-countered rows carry nothing (no "0 counters" noise). Presence-only (a two-author
# claim shows ONE neutral marker, never "disputed by N"); ADDITIVE (the flag never
# re-orders/re-ranks/filters/re-weights the list — order/paging/count/confidence
# byte-identical to slice-06). Backed by the read-only BATCH `counter_presence_for(&[cid])`
# (ONE aggregate `referenced_cid IN (...)` UNION-ALL DISTINCT read over the indexed ref
# tables — no N+1, I-LF-8). LF-1 walking skeleton (GET /claims HX-Request flags only the
# countered row) + no-JS parity + presence-only single-marker + one-hop link + no-noise +
# the shown-never-applied no-regression GOLD + the N+1 behavioral proxy. Drives the REAL
# `openlore ui` via `ViewerServer` over a REAL seeded local store (slice-11 seeds reused);
# NO mocked boundary (LOCAL read). Per Mandate 9/11 example-based, never PBT-generated at
# this layer (the strict 1-query bound is a DELIVER adapter-duckdb unit/property test).
# DISTILL registers + RED gate; LF-* stay RED (`todo!()`).
[[test]]
name = "viewer_counter_claim_list_flags"
path = "../../tests/acceptance/viewer_counter_claim_list_flags.rs"
harness = true

# Slice-12 (viewer-counter-claim-list-flags; DISTILL) GOLD / guardrail invariants over the
# whole flagged-list surface (cross-cutting I-LF-1/2/5/6/8):
# every_claims_list_render_with_flags_leaves_the_store_read_only (read-only state-delta,
# Mandate 8 — the presence read persists nothing),
# no_claims_list_render_with_flags_adds_a_write_or_sign_control (no sign/publish/counter
# control on any shape — the "Countered" markers are render-only `<a href>` TEXT; authoring
# stays the slice-03 CLI), the_flagged_claims_list_page_chrome_stays_offline_no_cdn (local
# /static/htmx.min.js, no CDN), the_flagged_claims_list_renders_fully_offline (the presence
# read is LOCAL DB-index only; renders network-down; the viewer re-verifies nothing), and
# the SHOWN-NEVER-APPLIED / no-regression gold
# the_list_order_and_confidence_are_byte_identical_with_and_without_flags (I-LF-2 / OD-AV-7
# / ADR-015 — the flag never re-orders/re-paginates/re-counts/re-weights the list). Drives
# the REAL `openlore ui` via `ViewerServer` over a REAL seeded local store; NO mocked
# boundary (the route is a LOCAL batch read + PURE projection/render). Per Mandate 9/11
# example-based, never PBT-generated at this layer. DISTILL registers + RED gate; LF-INV-*
# stay RED (`todo!()`).
[[test]]
name = "viewer_counter_claim_list_flags_invariants"
path = "../../tests/acceptance/viewer_counter_claim_list_flags_invariants.rs"
harness = true
