[package]
name = "lexicon"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore Lexicon schemas (org.openlore.*) — federation contract. Pure."

[lib]
path = "src/lib.rs"

# PURE: serde + thiserror only.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
