[package]
name = "openlore-test-support"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore shared test doubles (FakePds, FakeIdentity, TestEnv, fixture builders) per DISTILL DD-6."

[lib]
path = "src/lib.rs"

# Test-support: pure-shaped test doubles + fixtures. May depend on
# ports + pure core (it implements the port traits).
[dependencies]
ports = { path = "../ports" }
claim-domain = { path = "../claim-domain" }
lexicon = { path = "../lexicon" }
async-trait = "0.1"
serde_json = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
# Ed25519 primitive for FakeIdentity's deterministic keypair (step
# 04-03). Pinned crate-locally to match `claim-domain`'s usage —
# `default-features = false` keeps OS-randomness out of the test
# double; seeded keys are deterministic per RFC 8032.
ed25519-dalek = { version = "2", default-features = false }

# Step 04-06: tokio for the FakePds module's async-trait impl + unit
# tests. The fake's read/write methods are `async fn` because the
# `PdsPort` contract is async (per ADR-004). `rt` for a single-thread
# runtime, `macros` for `#[tokio::test]`.
#
# Step 05-08: hyper + http-body-util let `FakePds::serve_http()` expose
# the same in-memory record store over an HTTP XRPC surface so the
# `openlore` subprocess (which speaks real reqwest XRPC via
# `adapter-atproto-pds`) can talk to the test double without leaving
# the test process. The HTTP server reuses the `FakePds` state via
# `Arc` — one source of truth for records across the in-process port
# trait surface and the subprocess HTTP surface.
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net"] }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net"] }

# Step 04-05: the universe-bound state-delta module (DD-3 bootstrap)
# lives at `tests/common/state_delta.rs` so future acceptance tests
# can pull it in via `#[path]`. We wire it as a self-test target here
# so its skeleton's own sanity tests run on every CI build and
# compile-time correctness is verified.
[[test]]
name = "state_delta_bootstrap"
path = "../../tests/common/state_delta.rs"
